--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "apollo-upload-client": "^17.0.0",
+    "axios": "^1.2.2",
     "graphql": "^16.6.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
